dev/xds-gateway/envoy-gateway.yaml
static_resources:
  listeners:
    - name: listener_0
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 10000
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                stat_prefix: ingress_http
                http2_protocol_options: {}
                stream_idle_timeout: 0s
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: xds_vhost
                      domains: ["*"]
                      # Protect against spoofing: remove any incoming x-route-cluster header
                      request_headers_to_remove: ["x-route-cluster"]
                      routes:
                        - match:
                            prefix: "/"
                            headers:
                              - name: x-route-cluster
                                present_match: true
                          route:
                            cluster_header: "x-route-cluster"
                            timeout: 0s
                        - match: { prefix: "/" }
                          route:
                            cluster: xds_default
                            timeout: 0s
                http_filters:
                  - name: envoy.filters.http.ext_proc
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.ext_proc.v3.ExternalProcessor
                      grpc_service:
                        envoy_grpc:
                          cluster_name: routing_policy_svc
                      processing_mode:
                        request_header_mode: SEND
                      failure_mode_allow: true
                      message_timeout: 0.2s
                  - name: envoy.filters.http.router
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router

  clusters:
    - name: routing_policy_svc
      type: STRICT_DNS
      connect_timeout: 0.25s
      http2_protocol_options: {}
      load_assignment:
        cluster_name: routing_policy_svc
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: localhost
                      port_value: 8081

    - name: xds_default
      type: LOGICAL_DNS
      connect_timeout: 1s
      http2_protocol_options: {}
      dns_lookup_family: V4_ONLY
      load_assignment:
        cluster_name: xds_default
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address:  127.0.0.1
                      port_value: 18000

#    - name: xds_b
#      type: STRICT_DNS
#      connect_timeout: 1s
#      http2_protocol_options: {}
#      load_assignment:
#        cluster_name: xds_b
#        endpoints:
#          - lb_endpoints:
#              - endpoint:
#                  address:
#                    socket_address:
#                      address: localhost
#                      port_value: 18000

admin:
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 19100
